--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.formatOnSave": true,
   "python.analysis.typeCheckingMode": "off",
-  "python.formatting.autopep8Args": [
-    "--max-line-length=120"
-  ]
+  "python.formatting.autopep8Args": ["--max-line-length=120"],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.python"
+  }
 }
